TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "126076286376000" [label="Start"];
  "126076286376000" -> "126076286382048";
  "126076286382048" [label="Code"];
  "126076286382048" -> "126076286385024";
  "126076286385024" [label="Function"];
  "126076286385024" -> "126076286384832";
  "126076286385024" -> "126076286386032";
  "126076286385024" -> "126076286375280";
  "126076286384832" [label="main IDENTIFIER"];
  "126076286386032" [label="Parameters"];
  "126076286375280" [label="Code"];
  "126076286375280" -> "126076286385360";
  "126076286375280" -> "126076286384592";
  "126076286375280" -> "126076286435776";
  "126076286385360" [label="Code"];
  "126076286385360" -> "126076286384352";
  "126076286384352" [label="Declaration"];
  "126076286384352" -> "126076286385504";
  "126076286384352" -> "126076286437744";
  "126076286385504" [label="x IDENTIFIER"];
  "126076286437744" [label="1 INT"];
  "126076286384592" [label="Code"];
  "126076286384592" -> "126076286435392";
  "126076286435392" [label="Declaration"];
  "126076286435392" -> "126076286435440";
  "126076286435392" -> "126076286439424";
  "126076286435440" [label="x IDENTIFIER"];
  "126076286439424" [label="2 INT"];
  "126076286435776" [label="Return"];
  "126076286435776" -> "126076286435536";
  "126076286435536" [label="0 INT"];
}
